test/pass/pointer2.min
program
    array x
start
    x # 123;
end
