test/fail/invalid_types3.min
program
    string x := 123
start
end
